@@ -68,6 +68,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - BNF                    Rowan Rodrik van der Molen
 - Boo                    Marcus Griep
 - Brainfuck \ Brainfork  Benny Baumann
+- C for Loadrunner       Stuart Moncrieff
 - C for Macs             M. Uli Kusterer
 - C#                     Alan Juden
 - C++                    Dennis Bayer, M. Uli Kusterer
