@@ -14,6 +14,7 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
 Version 1.0.8.10
   -  Added language files
+     * C: Loadrunner dialect (Stuart Moncrieff)
      * EPC (Thorsten Muehlfelder)
   -  Small bugfix in LangCheck when looking for language files
   -  Improvements to language files (BenBE)
